[gd_scene load_steps=2 format=3 uid="uid://d3mdypmeodu2y"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_g18sd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g18sd")

[node name="Main_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1916.0
offset_bottom = 1083.0

[node name="Label" type="Label" parent="Main_menu"]
layout_mode = 0
offset_left = 818.0
offset_top = 136.0
offset_right = 1022.0
offset_bottom = 180.0
text = "IRON JAM 2024"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="Main_menu"]
layout_mode = 0
offset_left = 874.0
offset_top = 416.0
offset_right = 967.0
offset_bottom = 449.0
text = "Start game"

[node name="Exit" type="Button" parent="Main_menu"]
layout_mode = 0
offset_left = 779.0
offset_top = 595.0
offset_right = 1069.0
offset_bottom = 679.0
text = "Exit"

[connection signal="pressed" from="Main_menu/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Main_menu/Exit" to="." method="_on_Exit_pressed"]
